[gd_scene load_steps=8 format=3 uid="uid://player01"]

[ext_resource type="Script" path="res://scripts/entities/Player.gd" id="1_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(10, 14)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_sprite"]
size = Vector2(16, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_interact"]
radius = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tool"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_damage_flash"]
resource_name = "damage_flash"
length = 0.8
loop_mode = 0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/update_mode = 0
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [1.0, 0.3, 1.0, 0.3, 1.0, 0.3, 1.0, 0.3, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
"damage_flash": SubResource("Animation_damage_flash")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 1
collision_mask = 1
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_body")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.3, 0.55, 0.85, 1)
texture = SubResource("PlaceholderTexture2D_sprite")
offset = Vector2(0, -4)

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_interact")

[node name="ToolHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolHitbox"]
shape = SubResource("RectangleShape2D_tool")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_main")
}

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true
